# cccl

./: .gitignore
.agent/skills/libcudacxx-style/: SKILL.md
.claude/skills/licudacxx-style/: SKILL.md
ci/: bench.yaml
ci/diff/: compare_ptx.py  compare_sass.py  normalize_ptx.py  normalize_sass.py
cub/benchmarks/: CMakeLists.txt
cub/benchmarks/bench/reduce/: crc.cu
cub/cub/: util_ptx.cuh
cub/cub/agent/: agent_radix_sort_downsweep.cuh
cub/cub/warp/specializations/: warp_reduce_shfl.cuh  warp_scan_shfl.cuh
cudax/benchmarks/bench/copy/: copy_bench.cu
cudax/include/cuda/experimental/: simd.cuh
cudax/test/: CMakeLists.txt
cudax/test/copy/: copy.cu  copy_common.cuh  copy_edge_cases.cu  copy_nvmath.cu  copy_nvmath_transpose.cu  copy_vectorize_5d.cu
cudax/test/simd/: simd.cu
docs/: nv-versions.json  objects.inv
docs/cudax/: index.rst
docs/libcudacxx/extended_api/: type_traits.rst
docs/libcudacxx/extended_api/mdspan/: dlpack_to_mdspan.rst
docs/libcudacxx/extended_api/memory/: ptr_rebind.rst
docs/libcudacxx/extended_api/memory_access_properties/: access_property.rst
docs/libcudacxx/extended_api/type_traits/: is_bitwise_comparable.rst  is_trivially_copyable.rst  is_trivially_copyable_relaxed.rst
docs/unstable/: .buildinfo  404_helper.html  cpp.html  genindex.html  index.html  pagelist.txt  py-modindex.html  search.html
docs/unstable/cccl/: 3.0_migration_guide.html  config_macros.html  contributing.html  license.html  tma.html
docs/unstable/cccl/contributing/: code_of_conduct.html
docs/unstable/cccl/development/: build_and_bisect_tools.html  index.html  macro.html  testing.html  visibility.html
docs/unstable/cub/: api.html  benchmarking.html  developer_overview.html  index.html  releases.html  test_overview.html  tuning.html
docs/unstable/cub/api/: block.html  classcub_1_1ArgIndexInputIterator.html  classcub_1_1BlockAdjacentDifference.html  classcub_1_1BlockDiscontinuity.html  classcub_1_1BlockExchange.html  classcub_1_1BlockHistogram.html  classcub_1_1BlockLoad.html  classcub_1_1BlockMergeSort.html  classcub_1_1BlockMergeSortStrategy.html  classcub_1_1BlockRadixRank.html  classcub_1_1BlockRadixRankMatch.html  classcub_1_1BlockRadixSort.html  classcub_1_1BlockReduce.html  classcub_1_1BlockRunLengthDecode.html  classcub_1_1BlockScan.html  classcub_1_1BlockShuffle.html  classcub_1_1BlockStore.html  classcub_1_1CacheModifiedInputIterator.html  classcub_1_1CacheModifiedOutputIterator.html  classcub_1_1GridQueue.html  classcub_1_1SwizzleScanOp.html  classcub_1_1WarpExchange.html  classcub_1_1WarpLoad.html  classcub_1_1WarpMergeSort.html  classcub_1_1WarpReduce.html  classcub_1_1WarpScan.html  classcub_1_1WarpStore.html  device.html  grid.html  index.html  iterator.html  namespacecub_1a0152e6fc2c5fb16bcc72078fc97dc4c2.html  namespacecub_1a03d07a1e0e455128713337bc38992ec6.html  namespacecub_1a063f8bddc3979e1cfeace53339434122.html  namespacecub_1a064eccad9bc8fdb3c5db25e0a4d19da2.html  namespacecub_1a161e3b7115aa10ae54875a24b19586a0.html  namespacecub_1a19c9696ebd3b66c361dd9abcafae2f3a.html  namespacecub_1a1b6e2aaf857cfd72861cf2499bf9acb3.html  namespacecub_1a1b975318a8f3f7a19769fa51121bb288.html  namespacecub_1a1d58d7c9bdbebe3c8ce82f47c881c418.html  (+142 more)
docs/unstable/cub/api_docs/: block_wide.html  device_wide.html  thread_level.html  warp_wide.html
docs/unstable/cub/developer/: block_scope.html  device_scope.html  nvtx.html  thread_level.html  warp_level.html
docs/unstable/cub/releases/: changelog.html
docs/unstable/cudax/: container.html  graph.html  index.html  memory_resource.html  places.html  stf.html
docs/unstable/cudax/api/: classcuda_1_1experimental_1_1block__group.html  classcuda_1_1experimental_1_1cluster__group.html  classcuda_1_1experimental_1_1grid__group.html  classcuda_1_1experimental_1_1logical__device.html  classcuda_1_1experimental_1_1places_1_1blocked__partition__custom.html  (+323 more)
docs/unstable/libcudacxx/: extended_api.html  index.html  ptx_api.html  releases.html  runtime.html  setup.html  standard_api.html
docs/unstable/maintainers/: backport_process.html  branching_strategy.html  index.html
docs/unstable/python/: api_reference.html  compute.html  compute_api.html  coop.html  coop_api.html  index.html  resources.html  setup.html
docs/unstable/thrust/: api.html  developer_overview.html  index.html  release_process.html  releases.html
libcudacxx/codegen/generators/: definitions.h  ld_st.h
libcudacxx/include/cuda/: cmath  type_traits
libcudacxx/test/: CMakeLists.txt
libcudacxx/test/atomic_codegen/: dump_and_check.bash
libcudacxx/test/simd_codegen/: CMakeLists.txt  decrement_f32x2.cu  fma_bf16.cu  fma_f16.cu  increment_f32x2.cu  less_bf16.cu  less_f16.cu  load_store_bf16.cu  load_store_f16.cu  load_store_f32.cu  load_store_f64.cu  load_store_i16.cu  load_store_i32.cu  load_store_i64.cu  load_store_i8.cu  minus_f32x2.cu  multiplies_bf16.cu  multiplies_f16.cu  plus_bf16.cu  plus_f16.cu  plus_f32.cu  unary_minus_f32x2.cu
libcudacxx/test/support/: test_macros.h
(+1045 files in other folders)
